--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <style>
-         iframe {
+         iframe, embed, object {
              display: block;
          }
         </style>
@@ -12,6 +12,10 @@
     hi
 
     <iframe src="out.html" height=400 width=400></iframe>
+    <embed src="out.html"/>
+    <object src="out.html"></object>
+    <link rel="import" href="out.html">
+
 
     hello
 
