--- a/html_slider/slider.html
+++ b/html_slider/slider.html
@@ -1,4 +1,5 @@
-<span class="label">{slider_label}</span>
-<input id="slider_{slider_num}" class="slider" type="range" min="0" max="{slider_size}" value="0" step="1" oninput="showVal()"/>
+<span class="label">{slider_label}:</span>
 <span class="range">0</span>
+<br>
+<input id="slider_{slider_num}" class="slider" type="range" min="0" max="{slider_size}" value="0" step="1" oninput="showVal()"/>
 <br>
